@@ -129,7 +129,10 @@ void event_nick(irc_session_t *session, const char *event, const char *origin,
 {
 	log_event(session, event, origin, params, count);
 	struct cbot *bot = irc_get_ctx(session);
-	cbot_handle_nick_event(bot, origin, params[0]);
+	if (strcmp(origin, bot->name) == 0)
+		cbot_rename(bot, params[0]);
+	else
+		cbot_handle_nick_event(bot, origin, params[0]);
 	printf("Event handled by CBot.\n");
 }
 
